--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-curl": "*",
         "ext-pdo": "*",
         "ext-gd": "*"
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
