--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-pdo": "*",
-        "ext-gd": "*"
-        "predis/predis": "~1.0"
+        "ext-gd": "*",
+        "predis/predis": "~1.0",
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
