--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": "7.2.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "5.5.*",
@@ -21,7 +21,6 @@
         "invisnik/laravel-steam-auth": "3.*",
         "oyejorge/less.php": "1.*",
         "fideloper/proxy": "~3.3",
-        "predis/predis": "~1.0",
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
