--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "invisnik/laravel-steam-auth": "3.*",
         "oyejorge/less.php": "1.*",
         "fideloper/proxy": "~3.3",
+        "predis/predis": "~1.0",
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
