--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Contentify/Contentify",
+    "name": "shivacms/shivacms",
     "description": "Contentify is an esports CMS based on the Laravel 5 framework.",
     "keywords": ["cms", "contentify", "gaming", "esports", "website"],
     "homepage": "http://www.contentify.org",
