--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "type": "project",
     "require": {
         "php": "7.1.33",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "6",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "5.5.*",
         "cartalyst/sentinel": "2.*",
