--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "7.1.33",
-        "laravel/framework": "6",
+        "php": "^7",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "5.5.*",
         "cartalyst/sentinel": "2.*",
